# waifu_moe

./: README.md
backend/: .env  .gitignore  Cargo.toml
backend/app/: .env  Cargo.toml
backend/backend/src/: main.rs
backend/rust_server/: Cargo.toml
backend/src/: main.rs
backend/src/api/: routes.rs
backend/src/controllers/: animes.rs  animes_controller.rs  characters.rs  characters_controller.rs  mod.rs
backend/src/database/: db.rs
backend/src/database/migration/src/: lib.rs  m20241203_015742_first_migrate.rs
backend/src/migration/: schema.rs
backend/src/model/: mod.rs  schema_animes.rs  schema_characters.rs
backend/src/models/: characters.rs
backend/src/repository/: anime.rs  anime_repo.rs  character.rs  character_repo.rs  mod.rs
backend/src/routes/: mod.rs  routes_animes.rs  routes_characters.rs
backend/src/services/: animes.rs  animes_services.rs  characters.rs  characters_services.rs  mod.rs
frontend/: astro.config.mjs  characters_animes.json  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
frontend/src/: App.svelte  characters.json  characters_animes.json
frontend/src/api/: .env  anime.ts  api.ts  fetch.ts  models.ts
frontend/src/lib/card/: card.svelte  pagbutton.svelte
frontend/src/lib/components/: bullet.svelte  leftarrow.svelte  rightarrow.svelte
frontend/src/lib/components/paginationBar/: main.svelte
frontend/src/lib/layout/: layout.svelte
frontend/src/lib/layout/paginationCol/: paginationCol.svelte
frontend/src/lib/pannel/: pannel.svelte
frontend/src/pages/: index.astro
(+4 files in other folders)
