[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1.2", features = [
    "sqlx-postgres",
    "macros",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1.42.0", features = ["full"] }
dotenvy = "0.15.7"
actix-web = "4.9.0"
chrono = "0.4.38"
serde = "1.0.215"
